--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "daisyui": "^2.43.0",
     "jwt-decode": "^3.1.2",
     "nookies": "^2.5.2",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
